--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Data Source=WIN-EP9R9HMH2BM;Initial Catalog=Algorithms;Integrated Security=True",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
