connected with database

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Data Source=WIN-EP9R9HMH2BM;Initial Catalog=Algorithms;Integrated Security=True",
+  "ConnectionString": "Data Source=WIN-EP9R9HMH2BM;Initial Catalog=Algorithms;Integrated Security=True;TrustServerCertificate=true",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
