OMG i'm so tired

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Data Source=WIN-EP9R9HMH2BM;Initial Catalog=Algorithms;Integrated Security=True;TrustServerCertificate=true",
+  "ConnectionString": "Server=sql.bsite.net\\MSSQL2016;Database=algorithmsproject69_;User Id=algorithmsproject69_;password=algorithmsproject69;TrustServerCertificate=True",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
