--- a/Alghorithms.csproj
+++ b/Alghorithms.csproj
@@ -17,4 +17,5 @@
   <ItemGroup>
     <Folder Include="Views\Auth\" />
   </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
